# llm-persona-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_persona/: __init__.py
tests/: test_llm_persona.py
